Update updateLine method's comment